# pathfinding_project

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_test_only.yml  cmake.yml  full.yml
.workflows/: cmake.yml
Core/: main.cpp
Core/Application/: CMakeLists.txt
Core/Application/inc/: command_line_parser.h  headless_multi_run.h  option_wrapper.h
Core/Application/src/: command_line_parser.cpp  headless_multi_run.cpp
Core/GUI/: CMakeLists.txt
Core/GUI/inc/: gui_dialog_evaluation.h  gui_dialog_multi_run.h  gui_dialog_single_run.h
Core/GUI/src/: gui_dialog_evaluation.cpp  gui_dialog_multi_run.cpp  gui_dialog_single_run.cpp  gui_main_window.cpp
Core/GUI/widgets/: CMakeLists.txt
Core/GUI/widgets/inc/: gui_config_form.h  gui_grid.h  gui_live_evaluator.h  gui_tab_multi_run.h
Core/GUI/widgets/src/: gui_config_form.cpp  gui_grid.cpp  gui_live_evaluator.cpp  gui_run_progress_view.cpp  gui_tab_multi_run.cpp  gui_tab_single_run.cpp
Core/GridGenerator/: CMakeLists.txt
Core/GridGenerator/inc/: cell.h  define.h  grid.h  obstacle_gen.h
Core/GridGenerator/src/: cell.cpp  grid.cpp  obstacle_gen.cpp
Core/Pathfinder/: CMakeLists.txt
Core/Pathfinder/ada_backend/: libpathfinding_ada.gpr
Core/Pathfinder/ada_backend/src/: a_star.adb  a_star.ads  dijkstra.adb  dijkstra.ads  pathfinder_c_inf.ads  pathfinder_common.adb  pathfinder_common.ads
Core/Pathfinder/c_abi/inc/: pathfinding_c_inf.h
Core/Pathfinder/c_abi/src/: pathfinding_c_inf.cpp
Core/Pathfinder/inc/: pathfinding.h  timer.h
Core/Pathfinder/src/: pathfinding.cpp  pathfinding_a_star.cpp  pathfinding_a_star_ada.cpp  pathfinding_dijkstra.cpp  pathfinding_dijkstra_ada.cpp  pathfinding_jump_point_search.cpp  timer.cpp
Core/RunInterface/: CMakeLists.txt
Core/RunInterface/inc/: runner.h
Core/RunInterface/src/: multi_run.cpp  runner.cpp  single_run.cpp
Core/inc/: cell.h  define.h  grid.h  gui_main_window.h  gui_tab_single_run.h  obstacle_gen.h  pathfinding.h
Core/inc/GUI/: gui_config_form.h  gui_dialog_evaluation.h  gui_dialog_multi_run.h  gui_dialog_single_run.h  gui_grid.h  gui_tab_multi_run.h  gui_tab_single_run.h
Core/inc/GUI/widgets/: gui_config_form.h  gui_grid.h  gui_run_progress_view.h  gui_tab_multi_run.h  gui_tab_single_run.h
Core/inc/GridGenerator/: cell.h  grid.h  obstacle_gen.h
Core/inc/Pathfinder/: pathfinding.h  timer.h
Core/inc/RunInterface/: runner.h
Core/src/: cell.cpp  grid.cpp  gui_dialog_single_run.cpp  gui_main_window.cpp  gui_tab_single_run.cpp  main.cpp  obstacle_gen.cpp  pathfinding_a_star.cpp  pathfinding_dijkstra.cpp
Core/src/GUI/: gui_config_form.cpp  gui_dialog_evaluation.cpp  gui_dialog_multi_run.cpp  gui_dialog_single_run.cpp  gui_grid.cpp  gui_main_window.cpp  gui_tab_multi_run.cpp  gui_tab_single_run.cpp
Core/src/GUI/widgets/: gui_config_form.cpp  gui_grid.cpp  gui_run_progress_view.cpp  gui_tab_multi_run.cpp  gui_tab_single_run.cpp
Core/src/GridGenerator/: cell.cpp  grid.cpp  obstacle_gen.cpp
Core/src/Pathfinder/: pathfinding.cpp  pathfinding_a_star.cpp  pathfinding_dijkstra.cpp  pathfinding_jump_point_search.cpp  timer.cpp
Core/src/RunInterface/: multi_run.cpp  runner.cpp  single_run.cpp
Paper/: 00_main.tex  01_einleitung.tex  03_hauptteil.tex  04_schlussteil.tex  10_anhang.tex  93_kurzfassung.tex  95_titelseite.tex  97_nomenklatur.tex  bibluS.bib  tikz-uml.sty
Paper/assets/listings/: ctest.txt  obstacle_drunken_walk.txt  priority_queue_compare_method.txt
Paper/assets/uml/: cell_class_uml.tex  grid_class_uml.tex  headlessRunner_class_uml.tex  obstacleGen_class_uml.tex  pathfindingParent_class_uml.tex  pathfindingTimer_class_uml.tex  pathfindingcommandparser_class_uml.tex  runnerParent_class_uml.tex
Tests/ModuleTests/: headless_runner_module_test.cpp
Tests/UnitTests/: a_star_unit_test.cpp  dijkstra_unit_test.cpp  jps_unit_test.cpp
test/AStarPathfinder_UnitTest/: a_star_unit_test.cpp
